--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -1,5 +1,5 @@
 {
-  "hushall": "Home & Living",
+  "husochhem": "Home & Living",
   "braskaminer": "Wood Stoves",
   "taljstenskaminer": "Soapstone Stoves",
   "kaminer": "Stoves",
