--- a/public/locales/fi/menu.json
+++ b/public/locales/fi/menu.json
@@ -1,5 +1,5 @@
 {
-  "hushall": "Koti & Koti",
+  "husochhem": "Koti & Koti",
   "braskaminer": "Takkat",
   "taljstenskaminer": "Vuolukivitakkat",
   "kaminer": "Kamiinat",
