mega menu and filter

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -201,7 +201,8 @@
   "text-casual-wear": "Casual Wear",
   "text-items": "items",
   "text-sorting-options": "Sorting Options",
-  "text-newest": "Newest",
+  "text-alfabetic": "Alphabetical order",
+  "text-newest": "Newest product",
   "text-testimonial": "Testimonial",
   "text-popularity": "Popularity",
   "text-price-low-high": "Price: Low to High",
