--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -201,7 +201,8 @@
   "text-casual-wear": "Vapaa-ajan vaatteet",
   "text-items": "tuotetta",
   "text-sorting-options": "Lajitteluvaihtoehdot",
-  "text-newest": "Uusimmat",
+  "text-alfabetic": "Aakkosjärjestys",
+  "text-newest": "Uusin tuote",
   "text-testimonial": "Suositus",
   "text-popularity": "Suosio",
   "text-price-low-high": "Hinta: alhaisesta korkeaan",
