--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -201,7 +201,8 @@
   "text-casual-wear": "Casual Wear",
   "text-items": "produkter",
   "text-sorting-options": "Sorteringsalternativ",
-  "text-newest": "Senaste",
+  "text-alfabetic": "Alfabetiskt ordning",
+  "text-newest": "Nyaste produkten",
   "text-testimonial": "Testimonial",
   "text-popularity": "Popularitet",
   "text-price-low-high": "Pris: lågt till högt",
