--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -62,8 +62,8 @@
   "hallar": "Hobs",
   "ugnar": "Ovens",
   "bastu": "Sauna",
-  "elektiskt/bastupriser": "Electric/Sauna Heaters",
-  "vedeldade/bastuspisar": "Wood-fired/Sauna Stoves",
+  "elektriska-bastuaggregat": "Electric Sauna Heater",
+  "vedeldad-bastu": "Wood-Fired Sauna",
   "tillbehor": "Accessories",
   "fritid-tradgard": "Leisure & Garden",
   "tradgard-utemiljo": "Garden & Outdoor Environment",
