--- a/public/locales/fi/menu.json
+++ b/public/locales/fi/menu.json
@@ -62,8 +62,8 @@
   "hallar": "Eteiset",
   "ugnar": "Uunit",
   "bastu": "Sauna",
-  "elektiskt/bastupriser": "Sähkösaunat",
-  "vedeldade/bastuspisar": "Puulämmitteiset kiukaat",
+  "elektriska-bastuaggregat_fi": "Sähkökiuas",
+  "vedeldad-bastu_fi": "Puulämmitteinen Sauna",
   "tillbehor": "Tarvikkeet",
   "fritid-tradgard": "Vapaa-aika & Puutarha",
   "tradgard-utemiljo": "Puutarha & Ulkotilat",
