--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -106,5 +106,8 @@
   "menu-tradgard-main": "Trädgård",
   "koksinredning": "Köksinredning",
   "badrumsinredning": "Badrumsinredning",
-  "batterier": "Batterier"
+  "batterier": "Batterier",
+  "bastu-Inredning": "Bastuinredning",
+  "elektriska-bastuaggregat": "elektriska-bastuaggregat",
+  "vedeldad-bastu": "Vedeldade Bastu"
 }
