--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -106,5 +106,8 @@
   "menu-tradgard-main": "Garden",
   "koksinredning": "Kitchen Interior",
   "badrumsinredning": "Bathroom Interior",
-  "batterier": "Batteries"
+  "batterier": "Batteries",
+  "ishockey": "Ice Hockey",
+  "skridskor": "Ice Skates",
+  "klubbor": "Hockey Sticks"
 }
