--- a/public/locales/fi/menu.json
+++ b/public/locales/fi/menu.json
@@ -106,5 +106,8 @@
   "menu-tradgard-main": "Puutarha",
   "koksinredning": "Keittiösisustus",
   "badrumsinredning": "Kylpyhuonesisustus",
-  "batterier": "Akut"
+  "batterier": "Akut",
+  "ishockey": "Jääkiekko",
+  "skridskor": "Luistimet",
+  "klubbor": "Mailat"
 }
