--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -107,7 +107,7 @@
   "koksinredning": "Kitchen Interior",
   "badrumsinredning": "Bathroom Interior",
   "batterier": "Batteries",
-  "ishockey": "Ice Hockey",
-  "skridskor": "Ice Skates",
-  "klubbor": "Hockey Sticks"
+  "icehockey": "Ice Hockey",
+  "ice-skates": "Ice Skates",
+  "hockey-sticks": "Hockey Sticks"
 }
