--- a/public/locales/fi/menu.json
+++ b/public/locales/fi/menu.json
@@ -107,7 +107,7 @@
   "koksinredning": "Keittiösisustus",
   "badrumsinredning": "Kylpyhuonesisustus",
   "batterier": "Akut",
-  "ishockey": "Jääkiekko",
-  "skridskor": "Luistimet",
-  "klubbor": "Mailat"
+  "icehockey": "Jääkiekko",
+  "ice-skates": "Luistimet",
+  "hockey-sticks": "Mailat"
 }
