--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -107,7 +107,7 @@
   "koksinredning": "Köksinredning",
   "badrumsinredning": "Badrumsinredning",
   "batterier": "Batterier",
-  "ishockey": "Ishockey",
-  "skridskor": "Skridskor",
-  "klubbor": "Klubbor"
+  "icehockey": "Ishockey",
+  "ice-skates": "Skridskor",
+  "hockey-sticks": "Klubbor"
 }
