--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -67,8 +67,8 @@
   "tillbehor": "Tillbehör",
   "fritid-tradgard": "Fritid & Trädgård",
   "tradgard-utemiljo": "Trädgård & Utemiljö",
-  "bastu-inredning": "Bastu-Inredning",
-  "bastu-stugor": "Bastu-Stugor",
+  "bastu-inredning": "Bastu Inredning",
+  "bastu-stugor": "Bastu Stugor",
   "forfon/atv": "Förfön/ATV",
   "atv/utv": "ATV/UTV",
   "snoskoter": "Snöskoter",
