--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -81,7 +81,7 @@
   "plotter/ekolod": "Plotter/Ekolod",
   "radar": "Radar",
   "roddbat": "Rodd Båt",
-  "jetskis": "Jetskis",
+  "jetskis": "Vattenskotrar",
   "bryggor": "Bryggor",
   "flytvastar": "Flytvästar",
   "fiske": "Fiske",
