--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -203,6 +203,10 @@
   "text-sorting-options": "Sorting Options",
   "text-alfabetic": "Alphabetical order",
   "text-newest": "Newest product",
+  "newest": "Newest",
+  "alphabetic": "Alphabetic",
+  "low-high": "Low-High",
+  "high-low": "High-Low",
   "text-testimonial": "Testimonial",
   "text-popularity": "Popularity",
   "text-price-low-high": "Price: Low to High",
