--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -1,10 +1,11 @@
 {
   "husochhem": "Home & Living",
-  "braskaminer": "Wood Stoves",
-  "taljstenskaminer": "Soapstone Stoves",
-  "kaminer": "Stoves",
+  "braskaminer": "Wood Fireplaces",
+  "hybridkaminer": "Hybrid fireplaces",
+  "taljstenskaminer": "Soapstone Fireplaces",
+  "kaminer": "Fireplaces",
   "eldstader-murspisar": "Fireplaces/Masonry Fireplaces",
-  "gjutjarnskaminer": "Cast Iron Stoves",
+  "gjutjarnskaminer": "Cast Iron Fireplaces",
   "skorstenar": "Chimneys",
   "varmepumpar": "Heat Pumps",
   "luft-luft": "Air-to-Air",
@@ -40,8 +41,9 @@
   "takstegar": "Roof Ladders",
   "inredning": "Interior Design",
   "kok": "Kitchen",
+  "pizza-oven": "Pizza Ugn",
   "kokskranar": "Kitchen Faucets",
-  "diskho": "Sinks",
+  "diskhoar": "Sinks",
   "badrum": "Bathroom",
   "tvattstallskranar": "Washbasin Faucets",
   "badkarsblandare": "Bathtub Mixers",
@@ -91,6 +93,10 @@
   "ekolod": "Fishfinders",
   "trollingmotor": "Trolling Motor",
   "fiskeklader": "Fishing Apparel",
+  "football": "Footballs",
+  "footballs": "Footballs",
+  "football-shoes": "Football Shoes",
+  "football-shirts": "Football Shirts",
   "sport": "Sport",
   "golf": "Golf",
   "golfbollar": "Golf Balls",
