--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -203,6 +203,10 @@
   "text-sorting-options": "Lajitteluvaihtoehdot",
   "text-alfabetic": "Aakkosjärjestys",
   "text-newest": "Uusin tuote",
+  "newest": "Uusin",
+  "alphabetic": "Aakkosjärjestys",
+  "low-high": "Matala-korkea",
+  "high-low": "Korkea-matala",
   "text-testimonial": "Suositus",
   "text-popularity": "Suosio",
   "text-price-low-high": "Hinta: alhaisesta korkeaan",
