--- a/public/locales/fi/menu.json
+++ b/public/locales/fi/menu.json
@@ -1,6 +1,7 @@
 {
   "husochhem": "Koti & Koti",
   "braskaminer": "Takkat",
+  "hybridkaminer": "Hybriditakat",
   "taljstenskaminer": "Vuolukivitakkat",
   "kaminer": "Kamiinat",
   "eldstader-murspisar": "Tulisijat/Tiilitakat",
@@ -40,8 +41,9 @@
   "takstegar": "Kattotikkaat",
   "inredning": "Sisustus",
   "kok": "Keittiö",
+  "pizza-oven": "Pizzauuni",
   "kokskranar": "Keittiöhanat",
-  "diskho": "Allas",
+  "diskhoar": "Allas",
   "badrum": "Kylpyhuone",
   "tvattstallskranar": "Pesuallashanat",
   "badkarsblandare": "Ammehanat",
@@ -91,6 +93,10 @@
   "ekolod": "Kaikuluotaimet",
   "trollingmotor": "Sähköperämoottorit",
   "fiskeklader": "Kalastusvaatteet",
+  "football": "Jalkapallo",
+  "footballs": "Jalkapallot",
+  "football-shoes": "Jalkapallokengät",
+  "football-shirts": "Jalkapallopaidat",
   "sport": "Urheilu",
   "golf": "Golf",
   "golfbollar": "Golfpallot",
