--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -203,6 +203,10 @@
   "text-sorting-options": "Sorteringsalternativ",
   "text-alfabetic": "Alfabetiskt ordning",
   "text-newest": "Nyaste produkten",
+  "newest": "Nyast",
+  "alphabetic": "Alfabetiskt",
+  "low-high": "Lågt-högt",
+  "high-low": "Högt-lågt",
   "text-testimonial": "Testimonial",
   "text-popularity": "Popularitet",
   "text-price-low-high": "Pris: lågt till högt",
