--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -1,6 +1,7 @@
 {
   "husochhem": "Hus & Hem",
   "braskaminer": "Braskaminer",
+  "hybridkaminer": "Hybridkaminer",
   "taljstenskaminer": "Täljstenskaminer",
   "kaminer": "Kaminer",
   "eldstader-murspisar": "Eldstäder/Murspisar",
@@ -40,8 +41,9 @@
   "takstegar": "Takstegar",
   "inredning": "Inredning",
   "kok": "Kök",
+  "pizza-oven": "Pizza Ugn",
   "kokskranar": "Kökskranar",
-  "diskho": "Diskho",
+  "diskhoar": "Diskhoar",
   "badrum": "Badrum",
   "tvattstallskranar": "Tvättställskranar",
   "badkarsblandare": "Badkarsblandare",
@@ -91,6 +93,10 @@
   "ekolod": "Ekolod",
   "trollingmotor": "Trollingmotor",
   "fiskeklader": "Fiskekläder",
+  "football": "Fotboll",
+  "footballs": "Fotbollar",
+  "football-shoes": "Fotbollsskor",
+  "football-shirts": "Fotbollskläder",
   "sport": "Sport",
   "golf": "Golf",
   "golfbollar": "Golfbollar",
