--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -130,7 +130,8 @@
   "text-view-cart": "View Cart",
   "text-added-to-bag": "Added to Cart",
   "text-view-details": "View Details",
-  "text-countryRestriction": "This product is not yet sold in your country",
+  "text-countryRestriction": "This product can only be sold in",
+  "text-sellsWithOther": "This product can only be sold together with",
   "text-shipping": "Shipping",
   "text-free-shipping": "Free Shipping",
   "text-shipping-address": "Shipping Address",
