--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -130,7 +130,8 @@
   "text-view-cart": "Näytä ostoskori",
   "text-added-to-bag": "Lisätty ostoskoriin",
   "text-view-details": "Näytä tiedot",
-  "text-countryRestriction": "Tätä tuotetta ei vielä myydä maassasi",
+  "text-countryRestriction": "Tätä tuotetta voidaan myydä vain maassa",
+  "text-sellsWithOther": "Tätä tuotetta voidaan myydä vain yhdessä",
   "text-shipping": "Toimitus",
   "text-free-shipping": "Ilmainen toimitus",
   "text-shipping-address": "Toimitusosoite",
