--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -130,7 +130,8 @@
   "text-view-cart": "Till kundvagn",
   "text-added-to-bag": "Tillagd i kundvagnen",
   "text-view-details": "Visa detaljer",
-  "text-countryRestriction": "Denna produkt sälja inte i ditt land än",
+  "text-countryRestriction": "Denna produkten säljs bara i",
+  "text-sellsWithOther": "Denna produkten sälja bara tillsammans med",
   "text-shipping": "Frakt",
   "text-free-shipping": "Gratis frakt",
   "text-shipping-address": "Leveransadress",
