--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -349,5 +349,6 @@
   "discover": "Discover",
   "summerSale": "Summer Sale",
   "winterSale": "Winter Sale",
-  "autumnSale": "Autumn Sale"
+  "autumnSale": "Autumn Sale",
+  "compadibleWith": "Compatible with"
 }
