--- a/public/locales/en/footer.json
+++ b/public/locales/en/footer.json
@@ -27,6 +27,6 @@
   "link-return-policy": "Return Policy",
   "link-site-map": "Sitemap",
   "link-kranar": "Faucets",
-  "link-pizza": "Pizza Oven",
+  "link-pizza-oven": "Pizza Oven",
   "link-braskamin": "Wood Stove"
 }
