--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -349,5 +349,6 @@
   "discover": "Tutustu",
   "summerSale": "Kesäale",
   "winterSale": "Talviale",
-  "autumnSale": "Syysale"
+  "autumnSale": "Syysale",
+  "compadibleWith": "Sopii"
 }
