--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -349,5 +349,6 @@
   "discover": "Upptäck",
   "summerSale": "Sommarrea",
   "winterSale": "Vinterrea",
-  "autumnSale": "Höstrea"
+  "autumnSale": "Höstrea",
+  "compadibleWith": "Passar till"
 }
